Migrate to ncurses.h 🤞

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,13 @@ project(snake_labyrinth C)
 
 set(CMAKE_C_STANDARD 99)
 
+find_package(Curses REQUIRED)
+find_library(MENU_LIBRARY menu)
+include_directories(${CURSES_INCLUDE_DIR})
+
 include_directories(.)
 include_directories(maze)
 
 add_executable(snake_labyrinth
-        rogueutil.c rogueutil.h maze/maze.c maze/maze.h main.c frontend/render.c frontend/render.h utils.c utils.h)
+        maze/maze.c maze/maze.h main.c frontend/render.c frontend/render.h utils.c utils.h)
+target_link_libraries(snake_labyrinth ${MENU_LIBRARY} ${CURSES_LIBRARIES})
