--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,16 @@ project(snake_labyrinth C)
 
 set(CMAKE_C_STANDARD 99)
 
+if (WIN32)
+    set(CURSES_INCLUDE_PATH "C:/MinGW/include/ncursesw")
+endif()
+
 find_package(Curses REQUIRED)
-find_library(MENU_LIBRARY menu)
+if (WIN32)
+    find_library(MENU_LIBRARY libmenuw)
+else()
+    find_library(MENU_LIBRARY menu)
+endif()
 include_directories(${CURSES_INCLUDE_DIR})
 
 include_directories(.)
