Add Min Heap DS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,19 +5,23 @@ set(CMAKE_C_STANDARD 99)
 
 if (WIN32)
     set(CURSES_INCLUDE_PATH "C:/MinGW/include/ncursesw")
-endif()
+endif ()
 
 find_package(Curses REQUIRED)
 if (WIN32)
     find_library(MENU_LIBRARY libmenuw)
-else()
+else ()
     find_library(MENU_LIBRARY menu)
-endif()
+endif ()
 include_directories(${CURSES_INCLUDE_DIR})
 
 include_directories(.)
 include_directories(maze)
 
 add_executable(snake_labyrinth
-        maze/maze.c maze/maze.h main.c frontend/render.c frontend/render.h utils.c utils.h)
+        ai/heap/heap.c ai/heap/heap.h
+        frontend/render.c frontend/render.h
+        maze/maze.c maze/maze.h
+        utils.c utils.h
+        main.c)
 target_link_libraries(snake_labyrinth ${MENU_LIBRARY} ${CURSES_LIBRARIES})
