--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ include_directories(maze)
 add_executable(snake_labyrinth
         containers/heap.c containers/heap.h
         containers/matrix.c containers/matrix.h
+        containers/path.c containers/path.h
         containers/sequence.c containers/sequence.h
         frontend/render.c frontend/render.h
         maze/maze.c maze/maze.h
