--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ include_directories(.)
 include_directories(maze)
 
 add_executable(snake_labyrinth
+        ai/random.c ai/random.h
         ai/rl/q_table.c ai/rl/q_table.h
         ai/rl/agent.c ai/rl/agent.h
         ai/solver.c ai/solver.h
