Add missing documentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ add_executable(snake_labyrinth
         containers/matrix.c containers/matrix.h
         containers/path.c containers/path.h
         containers/sequence.c containers/sequence.h
-        frontend/render.c frontend/render.h
+        render/render.c render/render.h
         maze/maze.c maze/maze.h
         utils.c utils.h
         main.c)
